--- a/template/block_mail.html
+++ b/template/block_mail.html
@@ -80,7 +80,7 @@
             <br>
             <p style="text-align : justify ; ">Nous vous remercions de bien vouloir nous faire parvenir les règlements correspondants.</p>
 
-            <p><strong>Newton {{entity}} : </strong><br>
+            <p><strong>NEWTON {{entity}} : </strong><br>
                 <strong>CREDIT DU NORD ROUEN-VOLTAIRE</strong><br>
                 <strong>IBAN :</strong> {{IBAN}}<br>
                 <strong>BIC :</strong> {{BIC}}</p>
