--- a/template/template_ppl_mail.html
+++ b/template/template_ppl_mail.html
@@ -11,15 +11,10 @@
     }
     .phrase1-signature{
         margin-left: 50px;
+        color: rgb(197, 118, 0);
         font-family: 'Gill Sans' , 'Gill Sans MT' , Calibri, 'Trebuchet MS' , sans-serif;
+        font-size: 17px;
     }
-    .phrase2_signature{
-        margin-left: 50px;
-        color: rgb(156, 146, 146);
-        font-size: 13px;
-    }
-
-
 
     </style>
   </head>
@@ -34,6 +29,8 @@
    
 
 <p class="adress-signature">
+  <strong class="phrase1-signature">
+    Newton Expertise</strong><br>
     22 rue Raymond Aron -
     76130 <strong>Mont-Saint-Aignan</strong><br>
     32 rue de Londres - 75009 <strong>Paris </strong><br>
@@ -44,15 +41,6 @@
     <strong>Retrouvez-nous sur les réseaux sociaux :</strong><br>
     <a href="https://www.facebook.com/newtonexpertise?fref=ts">Facebook</a><br>
     <a href="https://twitter.com/NewtonExpertise">Twitter</a>
-</p>
-<p class="phrase1-signature"><strong>Pour mieux vous accompagner dans vos projets et faire vivre vos idées, l’équipe de <strong
-        style="color:rgb(197, 118, 0)">Newton Expertise</strong> s’engage à vos côtés pour vous offrir un
-    service personnalisé.</strong>
-</p>
-<p class="phrase2_signature">L'intégrité de ce message n'étant
-    pas assurée sur internet, Newton Expertise ne peut être
-    tenu responsable de son contenu. Toute utilisation ou diffusion non autorisée est interdite.
-    Si vous n'êtes pas destinataire de ce message, merci de le détruire et d'avertir l'expéditeur.</p>
 </p>
   </body>
 </html>
